crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@edge_cases__duplicate_path_from_fragment_and_field.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{:?}\", error),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/duplicate_path_from_fragment_and_field.graphql
---
TraversalErrors(["All fields under 'me' have @mock - this would leave an empty selection set after removal"])
