crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@edge_cases__fragment_with_mock_field.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/fragment_with_mock_field.graphql
---
{
  "type": "PartialMocked",
  "data": {
    "document": "query GetProducts { topProducts(first: 5) { ...ProductInfo } } fragment ProductInfo on Product { name price reviews @mock(hint: \"positive reviews\") { id body } }",
    "mocked_fields": [
      {
        "path": "topProducts.reviews",
        "hint": "positive reviews",
        "return_type": "Review"
      }
    ]
  }
}
