crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@edge_cases__mocked_field_with_remaining_inline_fragment.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mocked_field_with_remaining_inline_fragment.graphql
---
{
  "type": "PartialMocked",
  "data": {
    "document": "query GetProducts { topProducts(first: 5) { name @mock ... on Reviewable { averageRating } } }",
    "mocked_fields": [
      {
        "path": "topProducts.name",
        "hint": null,
        "return_type": "String"
      }
    ]
  }
}
