crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@edge_cases__multiple_sibling_mocks.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/multiple_sibling_mocks.graphql
---
{
  "type": "PartialMocked",
  "data": {
    "document": "query GetUser { me { id name @mock(hint: \"celebrity name\") username @mock(hint: \"unique username\") reviews @mock { id body } } }",
    "mocked_fields": [
      {
        "path": "me.name",
        "hint": "celebrity name",
        "return_type": "String"
      },
      {
        "path": "me.username",
        "hint": "unique username",
        "return_type": "String"
      },
      {
        "path": "me.reviews",
        "hint": null,
        "return_type": "Review"
      }
    ]
  }
}
