crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@edge_cases__nested_mock_with_introspection.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/edge_cases/nested_mock_with_introspection.graphql
---
{
  "type": "PartialMocked",
  "data": {
    "document": "{ topProducts(first: 5) { __typename reviews @mock { body } } }",
    "mocked_fields": [
      {
        "path": "topProducts.reviews",
        "hint": null,
        "return_type": "Review"
      }
    ]
  }
}
